# zerg

./: Makefile.in  configure  configure.ac  deploy.sh
autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
src/: Config.cc  Config.hh  Log.hh  Main.cc  Makefile.am  Makefile.in  Server.cc  Server.hh  log.cfg  zerg.cfg
